# old-argo-dataflow

./: .codecov.yml  .dockerignore  .gitignore  .golangci.yml  .snyk  CHANGELOG.md  DEV.md  Dockerfile  Makefile  PROJECT  Procfile  README.md  USERS.md  example-cloudevent.json  example-pipeline.yaml  go.mod  go.sum  main.go  manager.env  t.yaml
.github/: governance.yml
cat/: main.go
config/: ci.yaml  cluster-quick-start.yaml  default-cluster.yaml  default.yaml  dev.yaml  e2e.yaml  examples.yaml  kafka-default.yaml  kafka-dev.yaml  metrics-server.yaml  quick-cluster-start.yaml  quick-start.yaml  stan-default.yaml  stan-dev.yaml
controllers/: config.go  const.go  error.go  eventbus_controller.go  func_controller.go  infer.go  infer_test.go  (+6 more)
sdks/python/: MANIFEST  Makefile  README.md  requirements.txt  setup.cfg  setup.py
sdks/python/argo_dataflow_sdk/: main.py
sdks/python/src/argo_dataflow_sdk/: __init__.py  main.py
sdks/python/tests/fixtures/default_step_async_error_handler/: app.py
sdks/python/tests/fixtures/default_step_async_handler/: app.py
sdks/python/tests/fixtures/default_step_error_handler/: app.py
sdks/python/tests/fixtures/default_step_handler/: app.py
sdks/python/tests/fixtures/default_step_termination_handler/: app.py
sdks/python/tests/fixtures/generator_step_async_error_handler/: app.py
sdks/python/tests/fixtures/generator_step_async_handler/: app.py
sdks/python/tests/fixtures/generator_step_error_handler/: app.py
sdks/python/tests/fixtures/generator_step_handler/: app.py
sdks/python/tests/integration/: test_integration.py
(+849 files in other folders)
