[metadata]
name = argo_dataflow_sdk
version = 0.0.1
author = Dom Deren (@domderen)
author_email = dominik.deren@live.com
description = Argo Dataflow SDK. Can be used to fulfill Argo-Dataflows IMAGE CONTRACT: https://github.com/argoproj-labs/argo-dataflow/blob/main/docs/IMAGE_CONTRACT.md
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/argoproj-labs/argo-dataflow
project_urls =
    Bug Tracker = https://github.com/argoproj-labs/argo-dataflow/issues
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
install_requires =
    aiohttp >=3
python_requires = >=3.6

[options.packages.find]
where = src